--- a/03.equipment.md
+++ b/03.equipment.md
@@ -2,41 +2,58 @@
 
 _Exhaustive_ list of gear and equipment required for the Carnival.
 
+:::{admonition} Incomplete!
+:class: danger
+
+This section is work in progress. Check back later.
+
+:::
+
 (equipment:tents)=
 ## Tents, tables and chairs
+
+All equipment lists below do not mention tents, tables and chairs, as they are listed separately here
 
 | | Tents | Tables | Chairs | 
 |-|-|-|-|
 | Registration + hire | 3x6 | 2 | 4 |
 | IT team, download | 3x6 | 3 | 4 |
 | Result screens | ? | 0 | 0 |
-| Commentator post | 3x3 | 1 | 1 |
+| Commentary tent | 3x3 | 1 | 1 |
 | Come-and-try | 3x3 | 1 | 2 |
 | Kids' tent | ? | 0 | 0 |
 | Start | two 3x3 | 1 | 2 |
 | **TOTAL** | 8! | 8 | 14 |
 
+> TODO: First aid tent?
+
 (equipment:arena)=
 ## General arena equipment
 
-Right five columns indicate whether the item is required for the individual events.
+Right five columns indicate whether the item is required for the individual events  
+(WARM-UP, MASS, MIDDLE, SPRINT, LONG)
 
-| # | Item | From | Quantity | WARM-UP | MASS | MIDDLE | SPRINT | LONG |
-|-:|-|-|:-:|:-:|:-:|:-:|:-:|:-:|
-| 1 | Flag `Orienteering` | Shed | ? | ☑ | ☑ | ☑ | ☑ |☑ |
-| 2 | Flag `OACT` | Shed | 4 | ☑ | ☑ | ☑ | ☑ | ☑ |
-| 3 | Flag `Ask me` | Shed | 2 | ☑ | ☑ | ☑ | ☑ | ☑ |
-| 4 |-|-|-|-|-|-|-|-|
-| 5 |-|-|-|-|-|-|-|-|
-| 6 | Tent sides | ?|-|-|-|-|-|-|
-| 7 | Press wall 2.4x3m | Arpad | 1 | ☑ | ☑ | ☑ | ☑ | ☑ |
-| 8 | Podium | ONSW | 1 | | ☑ | | | ☑ |
-| 9 | Weights and hold-downs | ? | 8 | ☑ | ☑ | ☑ | ☑ | ☑ |
+| # | Item | From | Quantity | Usage |
+|-:|-|-|:-:|:-:|
+| 1 | Flag `Orienteering` | Shed | ? | ☑ ☑ ☑ ☑ ☑ |
+| 2 | Flag `OACT` | Shed | 4 | ☑ ☑ ☑ ☑ ☑ |
+| 6 | Tent sides, 2 or 3 per tent | Shed | ? | ☑ ☑ ☑ ☑ ☑ |
+| 9 | Weights and hold-downs | ? | ? | ☑ ☑ ☑ ☑ ☑ |
+| | | | | ☑ ☑ ☑ ☑ ☑ |
+| 7 | Press wall 2.4x3m | Arpad | 1 | ☑ ☑ ☑ ☑ ☑ |
+| 8 | Podium | ONSW | 1 | ◻︎ ☑ ◻︎ ◻︎ ☑ |
+| 9 | Toiletries | Shed | - | ◻︎ ☑ ◻︎ ◻︎ ☑ |
+|  | Garbage bags | Shed | 1 roll | ☑ ☑ ☑ ☑ ☑ |
+|  | Signage: tent signs | make | - | ☑ ☑ ☑ ☑ ☑ |
+|  | Signage: navigation | make | - | ☑ ☑ ☑ ☑ ☑ |
+|  | Signage: traffic alerts | Shed | ? | ☑ ☑ ☑ ☑ ☑ |
+|  | Water containers | Shed | ? | ☑ ☑ ☑ ☑ ☑ |
+|  | First aid kit | Office | - | ☑ ☑ ☑ ☑ ☑ |
+|  | Defibrillator | Office | - | ☑ ☑ ☑ ☑ ☑ |
 
 - Podium and press wall need to make it to the DINNER as well
-
-- tent sides!
-- press wall 3x2.4m
+- press wall is 3 by 2.4m
+- crowd control barriers + Orienteering Australia banners
 - logo banners?
 - tent weights and hold-downs
 - tent walls
@@ -57,69 +74,142 @@ Right five columns indicate whether the item is required for the individual even
 ## Central IT tent
 
 - All IT equipment is used in all events
-- All computers is picked up from OACT office
+- All computers is picked up from OACT office, Bill Jones
 
-| # | Item | Quantity | Function | Comment |
-|-:|-|:-:|-|-|
+:::{admonition} Incomplete!
+:class: danger
+
+This list is to be updated. Check with [IT section](04.computers.md) as well.
+
+:::
+
+
+| # | Item | Quantity | Comment |
+|-:|-|:-:|-|
 | 1 | Dell Inspiron: MAPPING laptop | 1 | |
-| 2 | Thinkpad: SPRINT CLIENT A laptop | 1 | |
-| 3 | Set A laptop | 1 | |
-| 4 | Set B laptop | 1 | |
-| 5 | Acer Spin: MTBO laptop | 1 | |
-| 5 | Network router + cables | 1 | |
-| 6 | Access point/extender | 1 | |
-| 7 | Split printer | 2 | |
-| 8 | Power banks, OACT | 4 | |
-| 9 | Power banks, Fedor | 3 | | |
-| 10 | Petrol generator Honda | 1 | | |
-| 11 | Electric cables and powerboards | 5? | | |
+| 2 | Thinkpad: SPRINT laptop | 1 | Main server |
+| 3 | Set A laptop | 1 |  |
+| 4 | Set B laptop | 1 |  |
+|  | External monitor (?) | 1 |
+| 6 | Network router + cables | 1 |
+| 7 | Access point/extender | 1 |
+| 7 | Split printer | 1 |
+| 8 | A4 printer | 1 |
+| 9 | SI: download unit | 2 | |
+| 9 | Power banks, OACT | 1 |
+| 10 | Power banks, Fedor | 3 | |
+| 11 | Petrol generator, Honda | 1 | |
+| 12 | Electric cables and powerboards | 5? | |
+|  | Sun hood(?) | ? | Laptop screens are next to impossible to see in the sun |
 
 ### + finish equipment
 
-- bunting for finish corridor
-- finish arch (from ONSW, Ori): MASS, SPINT, LONG
+| # | Item | Quantity | Comment |
+|-:|-|:-:|-|
+| 1 | SI: finish station | 2 | |
+| 2 | Finish arch | 2 | Ori brings from ONSW, to be used in MASS, SPRINT, LONG |
+| 3 | Flag `Start` | 2 | or arch? |
+| 4 | Bunting | 50m | For finish corridors |
 
 ### + screens tent
 
-- TVs and stands
+| # | Item | Quantity | Comment |
+|-:|-|:-:|-|
+| 1 | TV, 40" | 2? | Trying to buy another TV |
+| 2 | TV stand | 1? | Or just use the structure of the tent? |
+| 3 | Power source | ? | Battery or generator? |
 
-### + radio controls
+### + radio controls `meshO`
+
+| # | Item | Quantity | Comment |
+|-:|-|:-:|-|
+| 1 | meshO Prime unit | 1 | [Connected to Download server](computers:scematic) |
+| 2 | 8m mast | 1 | To be set up at IT tent |
+| 3 | meshO Diagnostics laptop+unit | 1 | To be operated independently |
+| 4 | meshO equipment | as needed | see separate radio plans |
+
+- meshO equipment to be managed by Tate Needham
 
 
 (equipment:registration)=
 ## Registration tent
 
-- includes map board hire tent!
+- Required in all events, see [schedule](01.schedule.md) for details
+- Functions:
+  - handout of competitors' bags
+  - registration of entry-on-the-day competitors
+  - collect all payments
+  - SI-Air hire
+  - map board hire
+  - lost and found
+  - general information
+
+
 - 1 table + 2 chairs for registration
 - 1 table + 2 chairs for map board hire
 
 - ipad (or two) for registrations
 
+| # | Item | Quantity | Comment |
+|-:|-|:-:|-|
+| 1 | Competitors' bags | exact | Will be prepared beforehand |
+| 2 | Money box (cash) | 1 | |
+| 3 | EFTPOS terminal | 1 | |
+| 1 | | | |
+| 1 | | | |
+| 1 | | | |
+| 1 | | | |
+
 ### + competitors' bags
 
-### + map board hire
+| # | Item | Quantity | Comment |
+|-:|-|:-:|-|
+| 1 | | | |
+
+### + map board and SI-Air hire
+
+| # | Item | Quantity | Comment |
+|-:|-|:-:|-|
+| 1 | Map boards from OACT | 30 | Repair required ? |
+| 2 | Map boards from ONSW | 30 |  |
+| 3 | Map boards from ? | ? |  |
+| 4 | SI-Air chips, OACT | ? |  |
+| 5 | SI-Air chips, ONSW | ? |  |
+| 6 | SI-Air chips, Colin Price | ? |  |
+| 7 | SI-Air chips, Livint-it-live | ? |  |
 
 
 (equipment:commentator)=
 ## Commentator tent
 
-- Arpad Kocsik (ADD to Bulletin 3!)
-- commentary and music
-- discuss equipment with Arpad directly
-- small tent
-- 1 table (small) + 1 chair
-- audio equipment
+- Commentary is used in all events, see [schedule](01.schedule.md) for details
+- All computers is picked up from OACT office, Bill Jones
+- Commentary tent is controlling all audio equipment
+
+> *TODO:* discuss equipment with Arpad directly
+
+| # | Item | Quantity | Comment |
+|-:|-|:-:|-|
+| 1 | Acer Spin: MTBO laptop | 1 | Small, but with external monitor, good battery life |
+| 2 | External monitor, 12V | 1 | Powered by the power bank |
+| 3 | Microphone | 1 | |
+| | Mixer/PA system controls ? | | |
+
 
 (equipment:cometry)=
 ## Come-and-try tent
 
-- small tent
-- 1 table
-- 2 chairs
-- Sample maps
-- Sample control
-- 2 flags `Come and try`
-- 2 coach volunteers (Toni, Raynie)
+- Come and try equipment in a purpose-formed box
+- Operates on all events, see [schedule](01.schedule.md) for details
+- Manned by [several coaches](people:cometry)
+
+| # | Item | Quantity | Comment |
+|-:|-|:-:|-|
+| 1 | Sample maps | 5-10 | From? |
+| 2 | Sample control | 1 | From? |
+| 3 | Flag `Ask me` | 2 | From shed |
+| 1 | | | |
+
 
 (equipment:start)=
 ## Start set
@@ -128,10 +218,23 @@ Right five columns indicate whether the item is required for the individual even
 - tent, table, chairs
 - clock(s?)
 
+| # | Item | Quantity | Comment |
+|-:|-|:-:|-|
+| | Flag `Start` | 1+1 | One for each of two starts |
+| | Map boxes | 7+4 ? | |
+| | Stands for CLEAR/CHECK/PUNCH START | 3+4 | |
+| |  | | |
 
 ## Course setting gear
 
-- Problem: how to stick control stands into ground?
+> TODO: how to stick control stands into ground?
+
+| # | Item | Quantity | Comment |
+|-:|-|:-:|-|
+| 1 | Controls stands | ? | Total $\approx$ 120 stands |
+| 2 | Controls flags | ? |  |
+| 3 | Control setters vest | 2 | Very useful for BS-11 units |
+
 - How many stands 
 
 
