--- a/04.computers.md
+++ b/04.computers.md
@@ -1,5 +1,12 @@
 # 💻 IT setup and notes
 
+:::{admonition} Incomplete!
+:class: danger
+
+This section is work in progress. Check back later.
+
+:::
+
 This page contains the information for the **IT team**.
 
 - People: [IT team](people:computers)
@@ -7,7 +14,10 @@ This page contains the information for the **IT team**.
 - Tools: see the full list of [equipment](equipment:it)
 - Join [IT team WhatsApp group](https://chat.whatsapp.com/D8x4pE5UoyO8gaRAwYkL3r)
 
+(computers:scematic)=
 ## Schematic for the Carnival IT setup
+
+![](_static/img/it_tent.png)
 
 
 ## Technical notes
