--- a/01.schedule.md
+++ b/01.schedule.md
@@ -13,6 +13,7 @@
 | by Sept 26 | Bibs printing 🖨 complete | Fedor |
 | by Oct 8 | Distribute flyers for Stringybark residents | Michael + Emily |
 | by Oct 8 | Info posters on all public areas | Marina + Fedor |
+| by Oct 8 | LiveLox and Live Resultat setup | Fedor |
 | from Oct 8 | [Vote in the ACT election early](https://www.elections.act.gov.au/for-voters/how-and-where-to-vote/where-to-vote-early-voting) to free up Oct 19th | Everyone |
 | Oct 10 | Carnival dinner: full payment, finalize setting, info flyers | Marina |
 | by Oct 12 | Collect all 🏆 from all sponsors and partners | Marina, Rohan, Kris |
@@ -38,12 +39,12 @@
 |--|--|--|
 | 6:18 | 🌅 Sunrise | |
 | 7:00 - 9:00 | Controls setup | Marina, Ariadna |
-| by 14:00 | Toilets 🚻 arrive | Rohan |
+| by 14:00 | Toilets 🚻 arrive | CBR Hire |
 | 14:00 - 15:00 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> `arena team` <br/> `IT team` |
 | 14:30 - 17:00 | Parking marshals 🚗 | `parking team` |
 | 15:00 | **Event center opens** 🎪 | |
 | 16:00 - 18:00 | 📣 Commentator | Arpad |
-| 16:00 - 18:00 | Come-and-try MTBO tent 🧭 | Toni, Raynie |
+| 16:00 - 18:00 | Come-and-try MTBO tent 🧭 | Toni, Raynie, Emily |
 | 16:00 - 18:30| Blue Lightning Stall 🧁 | Deirdre |
 | 16:00 - 19:00 | Mojo Bike Repairs 🔧 | Chris |
 | 16:30 - 17:00 | Stretching with Yoga for Posture 🧘 | Elena |
@@ -76,7 +77,7 @@
 | 15:00 - 16:00 | Start 🚀 setup | `start team` |
 | 15:00 - 19:00 | Coffee van ☕️ | KDS coffee |
 | 15:30 - 16:00 | Stretching with Yoga for Posture 🧘 | Elena |
-| 15:30 - 16:30 | Come-and-try MTBO tent 🧭 | Toni, Raynie |
+| 15:30 - 16:30 | Come-and-try MTBO tent 🧭 | Toni, Raynie, Emily |
 | 16:00 - 19:00 | 📣 Commentator | Arpad |
 | 16:00 - 19:30 | First-Aid officer 🚑 present | GetFirstAid |
 | 16:00 - 19:00 | Mojo Bike Repairs 🔧 | Chris |
@@ -109,7 +110,7 @@
 | 7:30 - 8:30 | Start 🚀 setup | `start team` |
 | 7:30 - 11:00 | Coffee van ☕️ | KDS coffee |
 | 7:30 - 12:00 | Mojo Bike Repairs 🔧 | Chris |
-| 7:30 - 9:30 | Come-and-try MTBO tent 🧭 | Toni, Raynie |
+| 7:30 - 9:30 | Come-and-try MTBO tent 🧭 | Toni, Raynie, Emily |
 | 8:00 - 12:00 | 📣 Commentator | Arpad |
 | 8:00 - 10:00 | Traffic marshals 🚗 to start | `parking team` |
 | 8:00 - 12:30 | Kids' tent 👦 | ? |
@@ -139,7 +140,7 @@
 | 13:00 - 14:00 | Start 🚀 setup | `start team` |
 | 13:00 - 16:00 | Blue Lightning Stall 🧁 | Deirdre |
 | 13:00 - 16:00 | Mojo Bike Repairs 🔧 | Chris |
-| 13:30 - 15:00 | Come-and-try MTBO tent 🧭 | Toni, Raynie |
+| 13:30 - 15:00 | Come-and-try MTBO tent 🧭 | Toni, Raynie, Emily |
 | 13:30 - 16:30 | 📣 Commentator | Arpad |
 | 13:30 - 16:30 | Kids' tent 👦 | ? |
 | 13:45 - 16:30 | First-Aid officer 🚑 present | GetFirstAid |
@@ -186,7 +187,7 @@ at **Harmonie German Club**
 | 8:00 | **Event center opens** 🎪 |  |
 | 8:00 - 9:00 | Start 🚀 setup | `start team` |
 | 8:00 - 10:00 | Mojo Bike Repairs 🔧 | Chris |
-| 8:00 - 10:00 | Come-and-try MTBO tent 🧭 | Toni, Raynie |
+| 8:00 - 10:00 | Come-and-try MTBO tent 🧭 | Toni, Raynie, Emily |
 | 8:30 - 12:30 | 📣 Commentator | Arpad |
 | 8:30 - 13:30 | Kids' tent 👦 | ? |
 | 9:00 - 13:00 | First-Aid officer 🚑 present | GetFirstAid |
@@ -197,6 +198,7 @@ at **Harmonie German Club**
 | 13:30 | **LONG course closure** 🏁 | |
 | 13:30 - 15:30 | Controls collection | 6? |
 | 13:30 - 15:30 | Arena 🎪 pack up | `arena team` |
+| 16:00 | Move toilets 🚻 outside the entry gate  | Rohan |
 | 16:00 | Kowen forest gates locked | `parking team` |
 | by 16:30 | Everyone leaves Kowen forest | |
 | by 17:30 | Publish official results 🧾 for LONG | Marina, Fedor |
@@ -207,7 +209,6 @@ at **Harmonie German Club**
 
 | When | What | Who |
 |--|--|--|
-| Oct 21 | Return toilets 🚻 to [Canberra Hire](https://maps.app.goo.gl/Jau9rcGNu5fGNsbB9) | Rohan |
 | Oct 21 | Return equipment to OACT shed and office | Marina + Fedor, Sergei |
 | | Return borrowed SI units to their owners | Fedor |
 | | Return 35 borrowed SIAC to Ryan Welsh, CORC | Fedor |
