--- a/02.people.md
+++ b/02.people.md
@@ -55,8 +55,8 @@ We will be thankful even if you can help during one day, or just some hours.
 | Veronika Iskhakova | Presentations Assistant | yes |
 | John Harding | Photography | yes |
 | Kelvin Meng | Photography | Saturday, Sunday |
-| Tom De Jong | Photography | ? |
-| Tash Thackray  | Photography | dinner? |
+| Tom De Jong | Photography | all events |
+| Tash Thackray  | Photography | ? |
 
 (people:start)=
 ## Start team 
@@ -82,7 +82,7 @@ We will be thankful even if you can help during one day, or just some hours.
 :::{admonition} Call for volunteers
 :class: danger
 
-We need 5 volunteers to fill the `start team` roles in each event (warm-up, mass, middle, sprint, long).
+We need 4 more volunteers to fill the `start team` roles in each event (warm-up, mass, middle, sprint, long).
 :::
 
 
@@ -117,19 +117,13 @@ We need 5 volunteers to fill the `start team` roles in each event (warm-up, mass
 
 | Name | Role | When |
 |:-|-:|-:|
-| ? | Leader of the `arena team` | all events |
+| Ann Scown | Leader of the `arena team` | all events |
+| John Scown | Leader of the `arena team` | all events |
 | Sergei Maksimov | Active glass van driver | Saturday, Sunday |
 | Rohan Hyslop | Toilets trailer | all events |
 | Ariadna Iskhakova | Road signs and flags | all events |
-| Sam Wilson | | Friday, Saturday, Sunday |
-| ? | | Thursday |
-| ? | | ? |
-
-:::{admonition} Call for volunteers
-:class: danger
-
-We need 2 more volunteers to fill the `arena team` roles in each event (warm-up, mass, middle, sprint, long). Besides, we need a dedicated team leader who would be able to commit to all events.
-:::
+| Emily | setup, packup | Thursday |
+| Sam Wilson | setup, packup | Friday, Saturday, Sunday |
 
 
 (people:registration-hire)=
@@ -157,19 +151,10 @@ We need 2 more volunteers to fill the `arena team` roles in each event (warm-up,
 | Name | Role | When |
 |:-|-:|-:|
 | Sandra Hogg | Registration | all events |
+| David Hogg | Registration | all events |
 | Carol Harding | Registration | all events |
-| Hind Needham | Registration | WARM-UP, Thursday |
-| ? | Registration | Friday |
-| ? | Registration | Saturday |
-| ? | Registration | Sunday |
 | Ann Scown | Map boards hire | all events |
 | John Scown | Map boards hire | all events |
-
-:::{admonition} Call for volunteers
-:class: danger
-
-We need 3 more volunteers to work at the registration tent in each event (warm-up, mass, middle, sprint, long), in particular on Thursday and Friday.
-:::
 
 
 (people:computers)=
@@ -205,36 +190,37 @@ We need 3 more volunteers to work at the registration tent in each event (warm-u
 - *MIDDLE requires a ride to the start (4km) and a ride from the finish (1km) which will require traffic marshals*
 - *LONG event at Kowen forest is run behind the locked gate, requiring special marshals at the gate to let in and out competitors, see corresponding entries in the [schedule](schedule:long)*
 
-:::{admonition} Call for volunteers
-:class: danger
-
-We need *many* volunteers to fill the `parking team` roles.  But the days are very different: the table below lists all slots that have to be filled.
-:::
-
 | Name | Role | When |
 |:-|-:|-:|
-| ? | Parking marshal | WARM-UP, Oct 17, Thursday 14:30-17:00 |
+| Axel Roberts | Parking marshal | WARM-UP, Oct 17, Thursday 14:30-17:00 |
 | Andrew Cheffers | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
 | David Poland | Parking marshal | WARM-UP, Oct 17, Thursday 15:30-17:00 |
 | Andrew Cheffers | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | David Poland | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
-| ? | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
-| ? | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
-| ? | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
+| Bruce Bowen | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
+| Andrew Cumming Thom | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
+| Frank Ingwersen | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | ? | Traffic marshal | MASS, Oct 18, Friday 17:15 - 19:00 |
 | ? | Traffic marshal | MASS, Oct 18, Friday 17:15 - 19:00 |
 | David Poland | Parking marshal | MIDDLE, Oct 19, Saturday 7:00 - 9:30 |
-| ? | Parking marshal | MIDDLE, Oct 19, Saturday 7:00 - 9:30 |
-| ? | Traffic marshal | MIDDLE, Oct 19, Saturday 8:00 - 10:00 |
+| Andrew Cumming Thom | Parking marshal | MIDDLE, Oct 19, Saturday 7:00 - 9:30 |
+| Frank Ingwersen | Traffic marshal | MIDDLE, Oct 19, Saturday 8:00 - 10:00 |
 | ? | Traffic marshal | MIDDLE, Oct 19, Saturday 8:00 - 12:00 |
 | ? | Traffic marshal | MIDDLE, Oct 19, Saturday 9:00 - 12:00 |
-| ? | Parking marshal | SPRINT, Oct 19, Saturday 12:30 - 14:00 |
-| ? | Parking marshal | SPRINT, Oct 19, Saturday 12:30 - 14:00 |
+| Bruce Bowen | Parking marshal | SPRINT, Oct 19, Saturday 12:30 - 14:00 |
+| Andrew Cumming Thom | Parking marshal | SPRINT, Oct 19, Saturday 12:30 - 14:00 |
 | David Poland | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
-| ? | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
+| Andrew Cumming Thom | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
 | ? | Gate marshal | LONG, Oct 20, Sunday 7:30 - 10:00 |
 | ? | Gate marshal | LONG, Oct 20, Sunday 10:00 - 12:20 |
 | ? | Gate marshal | LONG, Oct 20, Sunday 12:30 - 16:00 |
+
+:::{admonition} Call for volunteers
+:class: danger
+
+We need 4 more volunteers to be traffic marshals in the `parking team` on Friday and Saturday morning.
+And probably three more people for the very special role of gate keeping at the Kowen forest on Sunday.
+:::
 
 
 (people:cometry)=
@@ -261,14 +247,14 @@ We need *many* volunteers to fill the `parking team` roles.  But the days are ve
 | Name | Role | When |
 |:-|-:|-:|
 | Ksenia Maksimova | Supervisor | Thursday |
-| Hind Needham | Supervisor | Friday |
-| ? | Supervisor | Saturday |
+| Hind Needham | Supervisor | Friday, Saturday morning |
+| ? | Supervisor | Saturday afternoon |
 | ? | Supervisor | Sunday |
 
 :::{admonition} Call for volunteers
 :class: danger
 
-We need lovely volunteers to work at the kids tent in each event (warm-up, mass, middle, sprint, long).
+We need lovely volunteers to work at the kids tent on Saturday afternoon and Sunday.
 :::
 
 
@@ -282,7 +268,7 @@ We need lovely volunteers to work at the kids tent in each event (warm-up, mass,
 :::{admonition} Call for volunteers
 :class: danger
 
-We need 11 more helpers to collect controls after the events.  Please, see the table below to see at which events you can contribute.
+We need 9 more helpers to collect controls after the events.  Please, see the table below to see at which events you can contribute.
 :::
 
 | Event | Setup | Collection |
