--- a/03.equipment.md
+++ b/03.equipment.md
@@ -16,16 +16,24 @@ All equipment lists below do not mention tents, tables and chairs, as they are l
 
 | | Tents | Tables | Chairs | 
 |-|-|-|-|
-| Registration + hire | 3x6 | 2 | 4 |
-| IT team, download | 3x6 | 3 | 4 |
-| Result screens | ? | 0 | 0 |
-| Commentary tent | 3x3 | 1 | 1 |
-| Come-and-try | 3x3 | 1 | 2 |
-| Kids' tent | ? | 0 | 0 |
-| Start | two 3x3 | 1 | 2 |
-| **TOTAL** | 8! | 8 | 14 |
+| Registration + hire | 3x3m Marquee<br/>(thick aluminum frame) | 2 large | 4 |
+| IT team, download | 3x3m Marquee | 2 large + 1 medium | 4 |
+| Result screens | 3x3m Marquee | 0 | 0 |
+| Commentary tent | 3x3m Marquee | 1 large | 2 |
+| Come-and-try | 3x3m light tent | 1 medium | 2 |
+| Kids' tent | Saturday (new) tent | 0 | 0 |
+| Start | two 3x3m light tents | 2 large? | 2 |
+| **TOTAL** | 8 | 9 | 14 |
 
-> TODO: First aid tent?
+- additional (camping) chairs should be brought by the volunteers themselves
+
+Unused tents:
+- 3x3m light tents: 1 remaining (check condition! and exact size)
+- 3x6m heavy OZtrail tent: 1 remaining, brocken
+- Dome tent
+- Iskhakovs' 3x6m heavy OZtrail tent: 1 remaining
+- Scowns' 3x3m heavy OZtrail tent: 1 remaining
+
 
 (equipment:arena)=
 ## General arena equipment
@@ -35,39 +43,34 @@ Right five columns indicate whether the item is required for the individual even
 
 | # | Item | From | Quantity | Usage |
 |-:|-|-|:-:|:-:|
-| 1 | Flag `Orienteering` | Shed | ? | ☑ ☑ ☑ ☑ ☑ |
-| 2 | Flag `OACT` | Shed | 4 | ☑ ☑ ☑ ☑ ☑ |
-| 6 | Tent sides, 2 or 3 per tent | Shed | ? | ☑ ☑ ☑ ☑ ☑ |
-| 9 | Weights and hold-downs | ? | ? | ☑ ☑ ☑ ☑ ☑ |
-| | | | | ☑ ☑ ☑ ☑ ☑ |
+| 1 | Tent walls | Shed | 12 Marquee, 3 Sat, 2 Dome | ☑ ☑ ☑ ☑ ☑ |
+| 2 | Tent weights | Shed | ? sand bags<br/>? water canisters | ☑ ☑ ☑ ☑ ☑ |
+| 2 | Flag `OACT`,`Orienteering` | Shed | 4 | ☑ ☑ ☑ ☑ ☑ |
+| 3 | Crowd control barriers | Arpad | 4-5 | ☑ ☑ ☑ ☑ ☑ |
+| 4 | Orienteering Australia banners | Arpad | 4-5 | ☑ ☑ ☑ ☑ ☑ |
 | 7 | Press wall 2.4x3m | Arpad | 1 | ☑ ☑ ☑ ☑ ☑ |
 | 8 | Podium | ONSW | 1 | ◻︎ ☑ ◻︎ ◻︎ ☑ |
 | 9 | Toiletries | Shed | - | ◻︎ ☑ ◻︎ ◻︎ ☑ |
-|  | Garbage bags | Shed | 1 roll | ☑ ☑ ☑ ☑ ☑ |
-|  | Signage: tent signs | make | - | ☑ ☑ ☑ ☑ ☑ |
-|  | Signage: navigation | make | - | ☑ ☑ ☑ ☑ ☑ |
-|  | Signage: traffic alerts | Shed | ? | ☑ ☑ ☑ ☑ ☑ |
-|  | Water containers | Shed | ? | ☑ ☑ ☑ ☑ ☑ |
-|  | First aid kit | Office | - | ☑ ☑ ☑ ☑ ☑ |
-|  | Defibrillator | Office | - | ☑ ☑ ☑ ☑ ☑ |
+| 10 | Garbage bags | Shed | 1 roll | ☑ ☑ ☑ ☑ ☑ |
+| 11 | Signage: tent signs | make | - | ☑ ☑ ☑ ☑ ☑ |
+| 12 | Signage: navigation | make | - | ☑ ☑ ☑ ☑ ☑ |
+| 13 | Signage: traffic alerts | Shed | `Runners on Road` 6+4<br/>`Caution` 2 | ☑ ☑ ☑ ☑ ☑ |
+| 14 | Water containers | Shed | ? | ☑ ☑ ☑ ☑ ☑ |
+| 15 | First aid kit | Office | ? | ☑ ☑ ☑ ☑ ☑ |
+| 16 | Defibrillator | Office | ? | ☑ ☑ ☑ ☑ ☑ |
 
-- Podium and press wall need to make it to the DINNER as well
-- press wall is 3 by 2.4m
-- crowd control barriers + Orienteering Australia banners
-- logo banners?
-- tent weights and hold-downs
-- tent walls
-- tent labels/signs/captions
-- road signs
+> TODO: Use office A3 laminator and printer for making signage
 
 ### + dinner
 
+The following items have to make it to the dinner:
 - podium
 - press wall
-- prize table
+- 1 table for prizes (but maybe the venue has a table?)
 - diplomas, certificates, medals, prizes
-- they do have audio/PA system
-- will there be a projector for photos?
+
+> TODO: they do have audio/PA system?
+> TODO: will there be a projector for photos?
 
 
 (equipment:it)=
@@ -108,7 +111,7 @@ This list is to be updated. Check with [IT section](04.computers.md) as well.
 |-:|-|:-:|-|
 | 1 | SI: finish station | 2 | |
 | 2 | Finish arch | 2 | Ori brings from ONSW, to be used in MASS, SPRINT, LONG |
-| 3 | Flag `Start` | 2 | or arch? |
+| 3 | Flag `Finish` | 2 | or arch? |
 | 4 | Bunting | 50m | For finish corridors |
 
 ### + screens tent
@@ -164,7 +167,13 @@ This list is to be updated. Check with [IT section](04.computers.md) as well.
 
 | # | Item | Quantity | Comment |
 |-:|-|:-:|-|
-| 1 | | | |
+| 1 | Bib | 1 per bag | for all registered competitors |
+| 2 | Zip ties | 4 per bag | for all registered competitors |
+| 3 | SI-Air chip | $\le$ 1 | if chip is rented and paid online |
+| 4 | Merchandise | | from the sponsors and partners |
+
+> TODO: zip ties to be picked up from the Shed
+> TODO: attach sticker with start times, paid hires to the bib and bag
 
 ### + map board and SI-Air hire
 
@@ -220,31 +229,40 @@ This list is to be updated. Check with [IT section](04.computers.md) as well.
 
 | # | Item | Quantity | Comment |
 |-:|-|:-:|-|
-| | Flag `Start` | 1+1 | One for each of two starts |
-| | Map boxes | 7+4 ? | |
-| | Stands for CLEAR/CHECK/PUNCH START | 3+4 | |
-| |  | | |
+| 1 | Flag `Start` | 1+1 | One for each of two starts |
+| 2 | Map boxes | 7+4 ? | |
+| 3 | Stands for CLEAR/CHECK/PUNCH START | 3+4 | |
+| 4 | Start clock | 4 | Two for each start ? |
 
 ## Course setting gear
 
-> TODO: how to stick control stands into ground?
 
 | # | Item | Quantity | Comment |
 |-:|-|:-:|-|
-| 1 | Controls stands | ? | Total $\approx$ 120 stands |
+| 1 | Controls stands |  | Total $\approx$ 120 stands |
 | 2 | Controls flags | ? |  |
-| 3 | Control setters vest | 2 | Very useful for BS-11 units |
+| 3 | SI units BS11 | as needed | Very useful for BS-11 units |
+| 4 | Magnetic on/off stick for BS11 SI units | many ? | Stored with SI units |
+| 5 | Control setters vest | 2 | Very useful for BS-11 units |
+| 6 | Battery powered drill | ? | For setting controls in hard ground |
+| 7 | Hammer + steel stake | 1 | For setting controls in hard ground |
 
-- How many stands 
+- How many stands in total? Approximately 120
+- More stand to arrive as John and Ann arrange
+- More control flags are available from John and Ann if needed
+- Check out [strategies for placing controls in hard ground](setting:hard_ground)
 
-
+> TODO: test the hard ground strategies
 
 ## Parking team gear
 
-- high viz vests
-- gate marshals -- tent, chairs, umbrellas ??
-- flag/sign for traffic marshals
-
+| # | Item | Quantity | Comment |
+|-:|-|:-:|-|
+| 1 | High-viz vests | ? | To be used by all parking and traffic marshals |
+| 2 | Traffic cones | ? | To mark parking lanes |
+| 3 | Bunting | ? | To mark parking lanes |
+| 4 | Gate marshals: chairs, umbrellas? | | |
+| 5 | Traffic marshals: signs? | | |
 
 
 
