--- a/09.course_setting.md
+++ b/09.course_setting.md
@@ -19,9 +19,19 @@
 | SPRINT | 47 | 71-109, 190-197 | OA, ONSW | + extra 190-203 and 205-224 |
 | LONG | 40 | 31-70 | OACT | |
 
+(setting:hard_ground)=
 ## Putting control stands into the hard ground
 
-- when the ground is hard
+The main goal in placing the controls in the terrain is that the competitors can ride by the control without stopping.
+
+Many times the ground is too hard for the control stand to be placed in such position.
+Possible strategies:
+
+- Try to find a softer spot, but such that comeptitors can still ride by without stopping
+- Use the battery powered drill to make a hole in the ground, then place control stand in the hole
+- Use steel stake and hammer to make a hole in the ground, then place control stand in the hole
+- Use rocks to create a small mound around the control stand which should hold it upright
+
 
 
 ## SI units
