--- a/02.people.md
+++ b/02.people.md
@@ -207,6 +207,7 @@ We need 4 more volunteers to fill the `start team` roles in each event (warm-up,
 | Frank Ingwersen | Traffic marshal | MIDDLE, Oct 19, Saturday 8:00 - 10:00 |
 | ? | Traffic marshal | MIDDLE, Oct 19, Saturday 8:00 - 12:00 |
 | ? | Traffic marshal | MIDDLE, Oct 19, Saturday 9:00 - 12:00 |
+| ? | Finish marshal | MIDDLE, Oct 19, Saturday 9:00 - 12:00 |
 | Bruce Bowen | Parking marshal | SPRINT, Oct 19, Saturday 12:30 - 14:00 |
 | Andrew Cumming Thom | Parking marshal | SPRINT, Oct 19, Saturday 12:30 - 14:00 |
 | David Poland | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
