--- a/01.schedule.md
+++ b/01.schedule.md
@@ -16,10 +16,10 @@
 | by Oct 8 | LiveLox and Live Resultat setup | Fedor |
 | by Oct 9 | Update main website to link to results | Paul + Fedor |
 | by Oct 9 | Risk management plan | Marina |
+| by Oct 9 | Document for prinding all temporary signage | Fedor + Marina |
 | from Oct 8 | [Vote in the ACT election early](https://www.elections.act.gov.au/for-voters/how-and-where-to-vote/where-to-vote-early-voting) to free up Oct 19th | Everyone |
 | Oct 10 | Carnival dinner: full payment, finalize setting, info flyers | Marina |
 | by Oct 12 | Collect all 🏆 from all sponsors and partners | Marina, Rohan, Kris |
-| Oct 10, 20:00 | ➡️ Team Zoom Meeting ⬅️ | **Everyone** |
 | Oct 11 | Collect 🔑 for all gates | Marina |
 | Oct 13, 23:59 | All entries close | |
 | Oct 15 | Map printing 🖨 complete | Paul, Fedor |
@@ -27,10 +27,10 @@
 | Oct 15 | Publish **start lists** | Marina + Fedor |
 | Oct 15, 18:00 | Final email 💌 to all participants | Marina |
 | Oct 15 | All equipment transferred from the shed | Fedor |
+| Oct 15, 20:00 | ➡️ Team Zoom meeting ⬅️ | **Everyone** |
 | Oct 16 | Competitors bags 🛍 packed and sorted | Emily, Marina |
 | Oct 16 | Final coordination with Blue Lightning Stall 🧁 | Marina, Driedre |
 | Oct 16 | Charge up batteries and power banks 🔋 | Fedor |
-| Oct 16, 20:00 | ➡️ Team Zoom meeting ⬅️ | **Everyone** |
 
 (schedule:warmup)=
 ## Oct 17, Thursday, WARM-UP
