--- a/02.people.md
+++ b/02.people.md
@@ -74,8 +74,9 @@ We will be thankful even if you can help during one day, or just some hours.
 |:-|-:|-:|
 | Cath Chalmers | Leader of the `start team` | all events |
 | Pat Miethke | Champ starts | MASS, LONG |
+| Nat Smith | Champ starts | MIDDLE, SPRINT |
 | ? | Champ starts | ? |
-| ? | Champ starts | ? |
+| Toni Brown | Carnival starts | MIDDLE, SPRINT, LONG |
 | ? | Carnival starts | ? |
 | ? | Carnival starts | ? |
 
@@ -122,7 +123,7 @@ We need 4 more volunteers to fill the `start team` roles in each event (warm-up,
 | Sergei Maksimov | Active glass van driver | Saturday, Sunday |
 | Rohan Hyslop | Toilets trailer | all events |
 | Ariadna Iskhakova | Road signs and flags | all events |
-| Emily | setup, packup | Thursday |
+| Emily Stewart-Reed | setup, packup | Thursday |
 | Sam Wilson | setup, packup | Friday, Saturday, Sunday |
 
 
@@ -198,6 +199,7 @@ We need 4 more volunteers to fill the `start team` roles in each event (warm-up,
 | Andrew Cheffers | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | David Poland | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | Bruce Bowen | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
+| Liz Abott | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | Andrew Cumming Thom | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | Frank Ingwersen | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | ? | Traffic marshal | MASS, Oct 18, Friday 17:15 - 19:00 |
