--- a/02.people.md
+++ b/02.people.md
@@ -73,17 +73,21 @@ We will be thankful even if you can help during one day, or just some hours.
 | Name | Role | When |
 |:-|-:|-:|
 | Cath Chalmers | Leader of the `start team` | all events |
-| Pat Miethke | Champ starts | MASS, LONG |
+| Jon Glanville | Champ starts | MASS |
 | Nat Smith | Champ starts | MIDDLE, SPRINT |
+| Alison Inglis | Champ starts | MIDDLE, SPRINT |
+| Peter Miller | Champ starts | MIDDLE, SPRINT |
 | ? | Champ starts | ? |
-| Toni Brown | Carnival starts | MIDDLE, SPRINT, LONG |
+| ? | Champ starts | ? |
+| Toni Brown | Carnival starts | WARMUP, MIDDLE, SPRINT, LONG |
+| Pat Miethke | Champ starts | MASS, LONG |
 | ? | Carnival starts | ? |
 | ? | Carnival starts | ? |
 
 :::{admonition} Call for volunteers
 :class: danger
 
-We need 4 more volunteers to fill the `start team` roles in each event (warm-up, mass, middle, sprint, long).
+We need more volunteers to fill the `start team` roles in all events, but particularly on Thursday (WARMUP) and Sunday (LONG).
 :::
 
 
@@ -236,9 +240,9 @@ And probably three more people for the very special role of gate keeping at the 
 
 | Name | Role | When |
 |:-|-:|-:|
-| Toni Brown | Coach | Thursday, Friday |
 | Raynie McNee | Coach | all events |
 | Emily Stewart-Reed | Coach | all events |
+| Toni Brown | Coach | Friday |
 
 (people:kids-tent)=
 ## Kids tent
@@ -276,8 +280,8 @@ We need 9 more helpers to collect controls after the events.  Please, see the ta
 
 | Event | Setup | Collection |
 |:-|-:|-:|
-| WARM-UP | Marina<br/>Ariadna | Marina<br/>**+3 people** |
+| WARM-UP | Marina<br/>Ariadna | Marina<br/>Alysha<br/>**+2 people** |
 | MASS | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis<br/>Shannon Jones<br/>Rebecca Minty | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis<br/>Shannon Jones<br/>Rebecca Minty|
 | MIDDLE | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell |
-| SPRINT | Eoin<br/>Cath | Eoin<br/>Cath<br/>**+2 people** |
+| SPRINT | Eoin<br/>Cath | Eoin<br/>Cath<br/>Alysha<br/>**+1 person** |
 | LONG | Marina<br/>Fedor | Emily<br/>Tom<br/>**+4 people** |
