--- a/02.people.md
+++ b/02.people.md
@@ -77,17 +77,19 @@ We will be thankful even if you can help during one day, or just some hours.
 | Nat Smith | Champ starts | MIDDLE, SPRINT |
 | Alison Inglis | Champ starts | MIDDLE, SPRINT |
 | Peter Miller | Champ starts | MIDDLE, SPRINT |
-| ? | Champ starts | ? |
+| Jenny Bourne | Champ starts | WARMUP, MASS |
+| Ronaldo Santos | Champ starts | WARMUP |
 | ? | Champ starts | ? |
 | Toni Brown | Carnival starts | WARMUP, MIDDLE, SPRINT, LONG |
 | Pat Miethke | Champ starts | MASS, LONG |
-| ? | Carnival starts | ? |
+| Melisa Donaldson | Carnival starts | MASS, LONG |
+| Emma Penton | Carnival starts | MASS |
 | ? | Carnival starts | ? |
 
 :::{admonition} Call for volunteers
 :class: danger
 
-We need more volunteers to fill the `start team` roles in all events, but particularly on Thursday (WARMUP) and Sunday (LONG).
+We need 4-6 volunteers to fill the `start team` roles.
 :::
 
 
@@ -218,14 +220,14 @@ We need more volunteers to fill the `start team` roles in all events, but partic
 | Andrew Cumming Thom | Parking marshal | SPRINT, Oct 19, Saturday 12:30 - 14:00 |
 | David Poland | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
 | Andrew Cumming Thom | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
-| ? | Gate marshal | LONG, Oct 20, Sunday 7:30 - 10:00 |
+| Ronaldo Santos ? | Gate marshal | LONG, Oct 20, Sunday 7:30 - 10:00 |
 | ? | Gate marshal | LONG, Oct 20, Sunday 10:00 - 12:20 |
 | ? | Gate marshal | LONG, Oct 20, Sunday 12:30 - 16:00 |
 
 :::{admonition} Call for volunteers
 :class: danger
 
-We need 4 more volunteers to be traffic marshals in the `parking team` on Friday and Saturday morning.
+We need more volunteers to be traffic marshals in the `parking team` on Friday and Saturday morning.
 And probably three more people for the very special role of gate keeping at the Kowen forest on Sunday.
 :::
 
@@ -256,14 +258,7 @@ And probably three more people for the very special role of gate keeping at the 
 | Ksenia Maksimova | Supervisor | Thursday |
 | Hind Needham | Supervisor | Friday, Saturday morning |
 | ? | Supervisor | Saturday afternoon |
-| ? | Supervisor | Sunday |
-
-:::{admonition} Call for volunteers
-:class: danger
-
-We need lovely volunteers to work at the kids tent on Saturday afternoon and Sunday.
-:::
-
+| Emma Penton | Supervisor | Sunday |
 
 (people:controls)=
 ## Controls setup and collection
@@ -275,13 +270,13 @@ We need lovely volunteers to work at the kids tent on Saturday afternoon and Sun
 :::{admonition} Call for volunteers
 :class: danger
 
-We need 9 more helpers to collect controls after the events.  Please, see the table below to see at which events you can contribute.
+We need more helpers to collect controls after the events.  Please, see the table below to see at which events you can contribute.
 :::
 
 | Event | Setup | Collection |
 |:-|-:|-:|
-| WARM-UP | Marina<br/>Ariadna | Marina<br/>Alysha<br/>**+2 people** |
+| WARM-UP | Marina<br/>Ariadna | Marina<br/>Alysha<br/>Ken Young<br/>Ronaldo Santos |
 | MASS | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis<br/>Shannon Jones<br/>Rebecca Minty | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis<br/>Shannon Jones<br/>Rebecca Minty|
 | MIDDLE | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell |
-| SPRINT | Eoin<br/>Cath | Eoin<br/>Cath<br/>Alysha<br/>**+1 person** |
-| LONG | Marina<br/>Fedor | Emily<br/>Tom<br/>**+4 people** |
+| SPRINT | Eoin<br/>Cath | Eoin<br/>Cath<br/>Alysha<br/>Ken Young |
+| LONG | Marina<br/>Fedor | Emily<br/>Tom<br/>Ken Young<br/>**+3 people** |
