--- a/02.faces.md
+++ b/02.faces.md
@@ -172,9 +172,9 @@ OACT Finance, Marshall
 OACT Website
 :::
 :::{grid-item-card}
-![](_static/faces/16_Arpad_Koscik.jpg) 
+![](_static/faces/16_Arpad_Kocsik.jpg) 
 +++
-<a href="search.html?q=Arpad+Koscik" style="text-decoration: none; color: inherit;">Arpad Koscik</a><br/>
+<a href="search.html?q=Arpad+Kocsik" style="text-decoration: none; color: inherit;">Arpad Kocsik</a><br/>
 Commentary
 :::
 :::{grid-item-card}
