--- a/02.people.md
+++ b/02.people.md
@@ -46,7 +46,7 @@ We will be thankful even if you can help during one day, or just some hours.
 | Phil Walker | Grants | yes |
 | Andrew Cheffers | OACT Finance | yes |
 | Paul De Jongh | OACT Website | |
-| Arpad Koscik | Commentary | yes |
+| Arpad Kocsik | Commentary | yes |
 | Emily Stewart-Reed | Promo & Social Media | yes |
 | Raynie McNee | Promo & Social Media | yes |
 | Alysha McNee | Promo & Social Media | yes |
