--- a/02.people.md
+++ b/02.people.md
@@ -54,7 +54,7 @@ We will be thankful even if you can help during one day, or just some hours.
 | Ariadna Iskhakova | Design | yes |
 | Veronika Iskhakova | Presentations Assistant | yes |
 | John Harding | Photography | yes |
-| Kelvin Meng | Photography | Saturday, Sunday |
+| Kelvin Meng | Photography | Friday, Saturday, Sunday |
 | Tom De Jong | Photography | all events |
 | Tash Thackray  | Photography | ? |
 
@@ -208,7 +208,7 @@ We need 4-6 volunteers to fill the `start team` roles.
 | Liz Abott | Parking marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | Andrew Cumming Thom | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
 | Frank Ingwersen | Traffic marshal | MASS, Oct 18, Friday 14:30 - 16:15 |
-| ? | Traffic marshal | MASS, Oct 18, Friday 17:15 - 19:00 |
+| Ari Piiroinen | Traffic marshal | MASS, Oct 18, Friday 17:15 - 19:00 |
 | ? | Traffic marshal | MASS, Oct 18, Friday 17:15 - 19:00 |
 | David Poland | Parking marshal | MIDDLE, Oct 19, Saturday 7:00 - 9:30 |
 | Andrew Cumming Thom | Parking marshal | MIDDLE, Oct 19, Saturday 7:00 - 9:30 |
@@ -221,7 +221,7 @@ We need 4-6 volunteers to fill the `start team` roles.
 | David Poland | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
 | Andrew Cumming Thom | Parking marshal | LONG, Oct 20, Sunday 7:30 - 9:30 |
 | Ronaldo Santos ? | Gate marshal | LONG, Oct 20, Sunday 7:30 - 10:00 |
-| ? | Gate marshal | LONG, Oct 20, Sunday 10:00 - 12:20 |
+| Lisa McLaughlin | Gate marshal | LONG, Oct 20, Sunday 10:00 - 12:20 |
 | ? | Gate marshal | LONG, Oct 20, Sunday 12:30 - 16:00 |
 
 :::{admonition} Call for volunteers
@@ -256,8 +256,8 @@ And probably three more people for the very special role of gate keeping at the 
 | Name | Role | When |
 |:-|-:|-:|
 | Ksenia Maksimova | Supervisor | Thursday |
-| Hind Needham | Supervisor | Friday, Saturday morning |
-| ? | Supervisor | Saturday afternoon |
+| ? | Supervisor | Friday |
+| ? | Supervisor | Saturday |
 | Emma Penton | Supervisor | Sunday |
 
 (people:controls)=
@@ -266,6 +266,7 @@ And probably three more people for the very special role of gate keeping at the 
 - as a rule, controls will be set by the course setters and controllers
 - help with setting and especially collecting controls is *greatly appreciated*
 - see the [schedule](schedule:warmup) for the course closure time for each event, after which the control collection teams will start their work
+- bring head torches for control collection in the evening! (WARM-UP, MASS, SPRINT)
 
 :::{admonition} Call for volunteers
 :class: danger
@@ -276,7 +277,7 @@ We need more helpers to collect controls after the events.  Please, see the tabl
 | Event | Setup | Collection |
 |:-|-:|-:|
 | WARM-UP | Marina<br/>Ariadna | Marina<br/>Alysha<br/>Ken Young<br/>Ronaldo Santos |
-| MASS | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis<br/>Shannon Jones<br/>Rebecca Minty | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis<br/>Shannon Jones<br/>Rebecca Minty|
-| MIDDLE | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell |
+| MASS | Cathy | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis<br/>Shannon Jones<br/>Rebecca Minty|
+| MIDDLE | Michael<br/>Emily<br/>Tom | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell |
 | SPRINT | Eoin<br/>Cath | Eoin<br/>Cath<br/>Alysha<br/>Ken Young |
-| LONG | Marina<br/>Fedor | Emily<br/>Tom<br/>Ken Young<br/>**+3 people** |
+| LONG | Marina<br/>Fedor | Emily<br/>Tom<br/>Cathy Hogg<br/>Ken Young<br/>**+2 people** |
