--- a/03.equipment.md
+++ b/03.equipment.md
@@ -229,7 +229,10 @@ This list is to be updated. Check with [IT section](04.computers.md) as well.
 
 | # | Item | Quantity | Comment |
 |-:|-|:-:|-|
-| 1 | Flag `Start` | 1+1 | One for each of two starts |
+|  | 2.5x2.5 tents | 2 |  |
+|  | Med tables | 2 |  |
+|  | Chairs |  | light + bring their own |
+| 1 | `Start` banners | 1+1 | One for each of two starts |
 | 2 | Map boxes | 7+4 ? | |
 | 3 | Stands for CLEAR/CHECK/PUNCH START | 3+4 | |
 | 4 | Start clock | 4 | Two for each start ? |
